# claudinio-code

./: .claudinio.json  .gitignore  .impeccable.md  2026-07-18-001253-local-command-caveatcaveat-the-messages-below.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.pt-BR.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
.agents/skills/deploy/: SKILL.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs  model.rs
cli/src/commands/: auth.rs  chat.rs  config.rs  index.rs  mod.rs  run.rs  search.rs  sessions.rs
cli/src/tui/: app.rs  diff.rs  editor.rs  event.rs  footer.rs  markdown.rs  mod.rs  overlays.rs  render.rs  theme.rs  transcript.rs
core/: Cargo.toml
core/src/: askpass.rs  auth.rs  http.rs  lib.rs  net_activity.rs  paths.rs  run.rs  state.rs  tasks.rs
core/src/agent/: app_sign.rs  attachments.rs  install_id.rs  mcp.rs  mod.rs  permissions.rs  persist.rs  provider.rs  session.rs  skills.rs  subagent.rs  transition.rs
core/src/code_intel/: embeddings.rs  fallback.rs  indexer.rs  mod.rs  thread_priority.rs  watcher.rs
core/src/lsp/: client.rs  manager.rs
docs/: 2026-07-15_reddit-post.md  ARCHITECTURE.md
docs/plans/: 2026-07-06_change-pensador-icon-to-codicon-thinking.md  2026-07-07_2025-07-16-settings-model-selector.md  2026-07-07_2025-07-16-sidebar-x-behavior.md  2026-07-07_2025-07-17-read-before-edit.md  2026-07-07_2026-07-07-auth-inline-card.md  2026-07-07_at-file-attachment-popover.md  2026-07-07_auth-inline-card.md  2026-07-07_double-click-open-external-app.md  2026-07-07_file-path-fallback.md  2026-07-07_fix-all-compiler-warnings.md  2026-07-07_fix-bash-tool-tcc-prompts-macos.md  2026-07-07_fix-language-picker-height.md  2026-07-07_fix-windows-ort-crt-linking.md  2026-07-07_golden-goals-system.md  2026-07-07_input-placeholder-copy.md  2026-07-07_interrupt-running-bash.md  2026-07-07_read-file-large-file-warning.md  2026-07-07_skill-tag-autocomplete.md  2026-07-07_subagent-goal-report-ui.md  2026-07-08_eliminate-build-warnings.md  2026-07-08_fix-at-mention-dropdown-gap.md  2026-07-08_fix-settings-modal-overflow.md  2026-07-08_retry-resilience-continuar-button.md  2026-07-09_2026-07-07-file-editor-monaco.md  2026-07-09_2026-07-09-fix-onboarding-bugs.md  2026-07-09_2026-07-09-remove-ts-diagnostics-from-file-editor.md  2026-07-09_2026-07-10-fix-toastpill-auto-dismiss.md  2026-07-09_api-key-authentication.md  2026-07-09_clipboard-paste-attachment.md  2026-07-09_continue-with-builder-button.md  2026-07-09_deploy-tag-0-1-1.md  2026-07-09_doc-embedding-for-semantic-search.md  2026-07-09_fix-at-mention-dropdown-gap.md  2026-07-09_fix-continue-with-builder-button.md  2026-07-09_migrate-all-prompts-to-chinese.md  2026-07-09_onboarding-screen.md  2026-07-09_plan-save-path-folder-picker.md  2026-07-09_textarea-editor-modal.md  2026-07-09_windows-network-drive-watcher-fix.md  2026-07-09_workspace-config-and-plan-path.md  (+88 more)
npm/claudinio/: README.md  package.json
public/: theme-boot.js
scripts/: build-npm.mjs  fetch_embedding_model.py  translate_locales.py
src/: App.css  App.test.ts  App.tsx  index.tsx  test-setup.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: live_search.rs  semantic_eval.rs  semantic_eval_queries.json
src-tauri/icons/: icon.icns
src-tauri/models/LateOn-Code-edge/: config.json  tokenizer.json
src-tauri/src/: askpass.rs  http.rs  lib.rs  main.rs  net_activity.rs  state.rs  tauri_sinks.rs  workspace_path.rs
src-tauri/src/agent/: mcp.rs  mod.rs  permissions.rs  persist.rs  provider.rs  run_state.rs  session.rs  skills.rs  subagent.rs  transition.rs
src-tauri/src/agent/provider/: catalog.rs  openai.rs
src-tauri/src/agent/tools/: bash.rs  edit_file.rs  finalize_plan.rs  grep.rs  list_dir.rs  mod.rs  read_file.rs  tasks.rs  web_search.rs  write_plan.rs
src-tauri/src/code_intel/: db.rs  embeddings.rs  fallback.rs  indexer.rs  mod.rs  parser.rs  text.rs  watcher.rs
src-tauri/src/commands/: agent.rs  askpass.rs  auth.rs  clipboard.rs  code_intel.rs  context.rs  enhance.rs  fs.rs  git.rs  ide.rs  locale.rs  lsp.rs  mcp.rs  mod.rs  network_log.rs  power.rs  procutil.rs  providers.rs  shell.rs  skills.rs  system_stats.rs  tasks.rs
src-tauri/src/lsp/: client.rs  manager.rs
src/components/: AskpassModal.tsx  ChatPanel.test.ts  ChatPanel.tsx  CommitPushModal.test.tsx  CommitPushModal.tsx  ContentViewerModal.test.tsx  ContentViewerModal.tsx  ContextMenu.test.tsx  ContextMenu.tsx  ContextPanel.tsx  ContextWarning.test.tsx  ContextWarning.tsx  DiffViewer.test.tsx  DiffViewer.tsx  EmptyState.test.tsx  EmptyState.tsx  FileEditorModal.test.ts  FileEditorModal.test.tsx  FileEditorModal.tsx  FileMentionPopover.test.tsx  FileMentionPopover.tsx  FileTree.test.tsx  FileTree.tsx  GitChangesModal.test.tsx  GitChangesModal.tsx  GitIndicator.test.tsx  GitIndicator.tsx  Icon.test.tsx  Icon.tsx  MermaidViewerModal.tsx  ModelSelect.test.tsx  ModelSelect.tsx  NetworkActivityModal.tsx  NetworkIndicator.tsx  NewSessionPopover.tsx  OnboardingWizard.test.tsx  OnboardingWizard.tsx  Popover.test.tsx  Popover.tsx  ProseContent.test.tsx  (+22 more)
src/lib/: chatRecords.ts  createSmoothText.test.ts  createSmoothText.ts  fileIndex.test.ts  fileIndex.ts  grill-me.test.ts  grill-me.ts  ipc-normalize.test.ts  ipc.test.ts  ipc.ts  locales.test.ts  markdown.test.ts  markdown.ts  mermaid.ts  mermaidViewer.ts  monacoThemes.test.ts  monacoThemes.ts  networkActivity.ts  platform.test.ts  platform.ts  source-hygiene.test.ts  subagentTimeline.test.ts  subagentTimeline.ts  systemStats.ts  theme.test.ts  theme.ts  visibility.ts  workspaceBuffer.ts  workspaceStatus.test.ts  workspaceStatus.ts
videos/claudinio-code-oss/: BRIEF.md  SCRIPT.md  STORYBOARD.md  audio_request.json  frame.md  index.html  meta.json  package.json
(+50 files in other folders)
