[package]
name = "claudinio-code"
version = "0.1.0"
description = "Claudinio Code — agentic coding platform"
authors = ["Victor Tavernari"]
edition = "2021"

[lib]
name = "claudinio_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "io-util", "process"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
diffy = "0.4"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = "8"
notify-debouncer-mini = "0.5"
dirs = "6"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = "0.23"
serde_yaml = "0.9"
sha2 = "0.10"

