[package]
name = "claudinio-code"
version = "0.1.0"
description = "Claudinio Code — agentic coding platform"
authors = ["Victor Tavernari"]
edition = "2021"

[lib]
name = "claudinio_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "io-util", "process"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
diffy = "0.4"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-ada = "0.1"
tree-sitter-agda = "1.3"
tree-sitter-asm = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-bicep = "1.1"
tree-sitter-c = "0.24"
tree-sitter-clojure = "0.1"
tree-sitter-cmake = "0.7"
tree-sitter-commonlisp = "0.4"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-cuda = "0.21"
tree-sitter-d = "0.8"
tree-sitter-dafny = "0.1"
tree-sitter-dart = "0.1"
tree-sitter-elm = "5.9"
tree-sitter-embedded-template = "0.25"
tree-sitter-fish = "3.6"
tree-sitter-fortran = "0.5"
tree-sitter-fsharp = "0.3"
tree-sitter-glsl = "0.2"
tree-sitter-go = "0.25"
tree-sitter-graphql = "0.1"
tree-sitter-hcl = "1.1"
tree-sitter-heex = "0.8"
tree-sitter-hlsl = "0.2"
tree-sitter-html = "0.23"
tree-sitter-ini = "1.4"
tree-sitter-java = "0.23"
tree-sitter-jsdoc = "0.25"
tree-sitter-json = "0.24"
tree-sitter-julia = "0.23"
tree-sitter-kconfig = "1.3"
tree-sitter-less = "1.0"
tree-sitter-llvm = "1.1"
tree-sitter-make = "1.1"
tree-sitter-matlab = "1.3"
tree-sitter-nginx = "1.0"
tree-sitter-nickel = "0.5"
tree-sitter-nix = "0.3"
tree-sitter-objc = "3.0"
tree-sitter-ocaml = "0.24"
tree-sitter-ocamllex = "0.25"
tree-sitter-odin = "1.3"
tree-sitter-php = "0.24"
tree-sitter-powershell = "0.25"
tree-sitter-prisma-io = "1.6"
tree-sitter-prolog = "0.1"
tree-sitter-properties = "0.3"
tree-sitter-proto = "0.3"
tree-sitter-python = "0.25"
tree-sitter-r = "1.3"
tree-sitter-racket = "0.24"
tree-sitter-regex = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.25"
tree-sitter-scheme = "0.24"
tree-sitter-slint = "0.24"
tree-sitter-solidity = "1.2"
tree-sitter-sparql = "0.25"
tree-sitter-systemverilog = "0.3"
tree-sitter-tsquery = "0.8"
tree-sitter-typescript = "0.23"
tree-sitter-verilog = "1.0"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1.1"
tree-sitter-zsh = "0.63"
rusqlite = { version = "0.32", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = "8"
notify-debouncer-mini = "0.5"
dirs = "6"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = "0.23"
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
image = "0.25"

