[package]
name = "claudinio-code"
version = "0.1.15"
description = "Claudinio Code — agentic coding platform"
authors = ["Victor Tavernari"]
edition = "2024"

# src-tauri is the Cargo workspace root; the repository root has no manifest.
# Declaring the (empty) workspace here stops cargo from walking further up and
# being absorbed by an unrelated manifest above the checkout.
[workspace]

[lib]
name = "claudinio_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "io-util", "process", "macros", "net", "time"] }
sysinfo = "0.33"
hmac = "0.12"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
csv = "1"
machine-uid = "0.5"
diffy = "0.4"
tempfile = "3"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-ada = "0.1"
tree-sitter-agda = "1.3"
tree-sitter-asm = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-bicep = "1.1"
tree-sitter-c = "0.24"
tree-sitter-clojure = "0.1"
tree-sitter-cmake = "0.7"
tree-sitter-commonlisp = "0.4"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-cuda = "0.21"
tree-sitter-d = "0.8"
tree-sitter-dafny = "0.1"
tree-sitter-dart = "0.2"
tree-sitter-elm = "5.9"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.25"
tree-sitter-erlang = "0.19"
tree-sitter-fish = "3.6"
tree-sitter-fortran = "0.6"
tree-sitter-fsharp = "0.3"
tree-sitter-glsl = "0.2"
tree-sitter-go = "0.25"
tree-sitter-graphql = "0.1"
tree-sitter-haskell = "0.23"
tree-sitter-hcl = "1.1"
tree-sitter-heex = "0.8"
tree-sitter-hlsl = "0.2"
tree-sitter-html = "0.23"
tree-sitter-ini = "1.4"
tree-sitter-java = "0.23"
tree-sitter-jsdoc = "0.25"
tree-sitter-json = "0.24"
tree-sitter-julia = "0.23"
tree-sitter-kconfig = "1.3"
tree-sitter-less = "1.0"
tree-sitter-llvm = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-make = "1.1"
tree-sitter-matlab = "1.3"
tree-sitter-nginx = "1.0"
tree-sitter-nickel = "0.5"
tree-sitter-nix = "0.3"
tree-sitter-objc = "3.0"
tree-sitter-ocaml = "0.25"
tree-sitter-ocamllex = "0.25"
tree-sitter-odin = "1.3"
tree-sitter-php = "0.24"
tree-sitter-powershell = "0.26"
tree-sitter-prisma-io = "1.6"
tree-sitter-prolog = "0.1"
tree-sitter-properties = "0.3"
tree-sitter-proto = "0.4"
tree-sitter-python = "0.25"
tree-sitter-r = "1.3"
tree-sitter-racket = "0.24"
tree-sitter-regex = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.26"
tree-sitter-scheme = "0.24"
tree-sitter-slint = "0.24"
tree-sitter-solidity = "1.2"
tree-sitter-sparql = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-systemverilog = "0.4"
tree-sitter-tsquery = "0.8"
tree-sitter-typescript = "0.23"
tree-sitter-verilog = "1.0"
tree-sitter-vhdl = "1.4"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1.1"
tree-sitter-zsh = "0.63"
rusqlite = { version = "0.32", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = "8"
notify-debouncer-mini = "0.5"
dirs = "6"
keepawake = "0.6"
sys-locale = "0.3"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
# default drops "esaxx_fast": it pulls esaxx-rs, a C++ lib that force-builds
# with the static CRT (/MT), which clashes on Windows with ort's prebuilt
# onnxruntime (dynamic CRT, /MD) — no CRT flag can satisfy both. esaxx_fast only
# speeds up Unigram *training*; inference/encoding doesn't need it. "onig" is
# kept for the Oniguruma-backed pre-tokenizers used at encode time.
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
tiktoken-rs = "0.6"
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
image = "0.25"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.12.4"
http = "1"
lru = "0.12"
rmcp = { version = "2", default-features = false, features = [
    "client",
    "macros",
    "reqwest",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "base64",
] }


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
